syntax = "proto3";

import "CookRecipeData.proto";

message CookRecipeDataNotify {
	enum CmdId {
		option allow_alias = true;
		NONE = 0;
		ENET_CHANNEL_ID = 0;
		ENET_IS_RELIABLE = 1;
		CMD_ID = 192;
	}

	CookRecipeData recipe_data = 1;
}
